results/SVCOMP/4-shot/log-HttpServletResponse-2024_03_19_00_22_56.txt
import java.io.IOException;
import java.io.PrintWriter;

public class HttpServletResponse {

    //@ requires string != null;
    //@ requires !string.contains("<bad/>");
    //@ ensures IOException if an I/O error occurs.
    public void sendRedirect(String string) throws IOException {
        checkNoSymbolic(string);
    }

    //@ ensures \result != null;
    //@ ensures !\result.toString().contains("<bad/>");
    //@ ensures IOException if an I/O error occurs.
    public PrintWriter getWriter() throws IOException {
        return new PrintWriter(System.out) {
            @Override
            public void println(String x) {
                checkNoSymbolic(x);
            }

            @Override
            public void println(Object x) {
                checkNoSymbolic(String.valueOf(x));
            }
        };
    }

    //@ requires s != null;
    //@ requires !s.contains("<bad/>");
    public void setContentType(String s) {
        checkNoSymbolic(s);
    }

    //@ requires s != null;
    private void checkNoSymbolic(String s) {
        if (s != null && s.contains("<bad/>")) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:8: error: Incorrectly formed or terminated ensures statement near here
    //@ ensures IOException if an I/O error occurs.
                            ^
/home/max/Documents/JMLGPT/tmp/HttpServletResponse.java:15: error: Incorrectly formed or terminated ensures statement near here
    //@ ensures IOException if an I/O error occurs.
                            ^
2 errors

